Fixed Annoying JS Bug

--- a/style.css
+++ b/style.css
@@ -663,6 +663,7 @@ h4 {
 
 /* COOKIE MESSAGE */
 .cookie-message {
+    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
